k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim #same name that you defined inside the database-persistent-volume-claim.yaml
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts: #configure the containers to use the allocated PVC
            - name: postgres-storage #same name as you defined for the volume
              mountPath: /var/lib/postgresql/data #where inside the container this storage should be stored, the one written is the default location
              subPath: postgres #defining a subpath is only specific to postgres
