k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: nastaran74/multi-worker
          env: #define environment varaible names and values
            - name: REDIS_HOST
              value: redis-cluster-ip-service #remeber that for communications, each deployment should reach out to the cluster ip service
            - name: REDIS_PORT
              value: '6379' #Everything should be strings in environment variables
