k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000 #other pods access this port of the clusterIP service
      targetPort: 3000 #the clusterIP service redirects the traffic to this port of client pods
