k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432 #other pods access this port of the clusterIP service
      targetPort: 5432 #the clusterIP service redirects the traffic to this port of client pods
