k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000 #other pods access this port of the clusterIP service
      targetPort: 5000 #the clusterIP service redirects the traffic to this port of client pods
